force-app/main/02_actionConfiguration/actionCallbacks/objects/ASR_Payment_Transaction__c/ASR_Payment_Transaction__c.object-meta.xml
<CustomObject>
    <description>Payment Transaction for Agent Script Recipes</description>
    <label>Payment Transaction</label>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>Payment Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>