force-app/main/02_actionConfiguration/actionCallbacks/objects/ASR_Payment_Transaction__c/fields/Loyalty_Points_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Points_Awarded__c</fullName>
    <label>Loyalty Points Awarded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>