force-app/main/02_actionConfiguration/actionCallbacks/objects/ASR_Payment_Transaction__c/fields/Receipt_Sent__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receipt Sent</label>
    <type>Checkbox</type>
</CustomField>