force-app/main/02_actionConfiguration/actionCallbacks/objects/ASR_Payment_Transaction__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <externalId>true</externalId>
    <label>Transaction ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>